--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,7 @@ env:
 
 script:
   - docker run --rm --privileged multiarch/qemu-user-static:$QUS_VERSION --reset -p yes
+  - ls /proc/sys/fs/binfmt_misc
+  - cat /proc/sys/fs/binfmt_misc/*
   - docker run --rm -it -v $(pwd):/workdir arm64v8/alpine:3.10 /workdir/setup
   - ls -la
