--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
 #  - docker run --rm --privileged multiarch/qemu-user-static:register
   - ls -al /usr/bin/qemu-*
   - ls -al /proc/sys/fs/binfmt_misc/
-  - docker run --rm --privileged multiarch/qemu-user-static:$QUS_VERSION --reset -p yes
+  - docker run --rm --privileged --entrypoint bash multiarch/qemu-user-static:$QUS_VERSION -xc '/register --reset -p yes'
 #  - ls /proc/sys/fs/binfmt_misc
 #  - cat /proc/sys/fs/binfmt_misc/*
   - docker run --rm -it -v $(pwd):/workdir arm64v8/alpine:3.10 /workdir/setup
