--- a/.travis.yml
+++ b/.travis.yml
@@ -11,18 +11,19 @@ addons:
 services:
   - docker
 
+git:
+  depth: 1
+
 env:
   global:
     - QUS_VERSION=v4.0.0-4
 
 
 script:
-#  - docker run --rm --privileged multiarch/qemu-user-static:register
-  - ls -al /usr/bin/qemu-*
+  - set -e
   - ls -al /proc/sys/fs/binfmt_misc/
-  - docker run --rm --privileged --entrypoint sh multiarch/qemu-user-static:$QUS_VERSION -xc '/register --reset -p yes'
-#  - ls /proc/sys/fs/binfmt_misc
-#  - cat /proc/sys/fs/binfmt_misc/*
+  - docker run --rm --privileged multiarch/qemu-user-static:$QUS_VERSION --reset -p yes
+  - ls -al /proc/sys/fs/binfmt_misc/
   - docker run --rm -it -v $(pwd):/workdir arm64v8/alpine:3.10 /workdir/setup
   - ls -la
 
