--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,11 +7,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - name: install deps
+      # todo checksum alpine-chroot-install
+      run: |
+        sudo apt-get install qemu-system-aarch64 qemu-user-static
+        curl -fsSL -O "https://raw.githubusercontent.com/hoshsadiq/alpine-chroot-install/destroy-script/alpine-chroot-install"
+        chmod +x alpine-chroot-install
     - name: Run a one-line script
-      run: ls -la
-  update_draft_release:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: toolmantim/release-drafter@v5.2.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      env:
+        - ALPINE_ARCH=aarch64
+        - RPI_CI_DTB_FILES=".*-rpi-3-b-plus.dtb$"
+      run: env && ./make-image
+#   update_draft_release:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: toolmantim/release-drafter@v5.2.0
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
