--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,6 +15,7 @@ jobs:
         chmod +x alpine-chroot-install
     - name: Run a one-line script
       env:
+        ALPINE_VERSION: v3.10.2
         ALPINE_ARCH: aarch64
         RPI_CI_DTB_FILES: ".*-rpi-3-b-plus.dtb$"
       run: env && ./make-image
