--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,5 +23,4 @@ jobs:
         echo ${ALPINE_VERSION}
         export ALPINE_VERSION
         env
-        ./make-image || true
-        sudo ./make-image
+        sudo env
